--- a/sem4/style.css
+++ b/sem4/style.css
@@ -1,12 +1,33 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap");
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+  /* height: 4rem; */
+  height: 80px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
+}
+
+.colorWhite {
+  color: #fff;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+
 * {
   font-family: "Roboto Slab", serif;
   margin: 0;
-}
-
-body {
-  background-color: #fffbf2;
 }
 
 .line {
@@ -14,10 +35,6 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color: #222;
-}
-
-.ccolor {
-  color: #ac7e68;
 }
 
 .headLeft {
@@ -64,7 +81,7 @@ li:hover {
 
 .backImg {
   width: 100%;
-  /* filter: brightness(50%); */
+  filter: brightness(50%);
 }
 
 .center {
@@ -84,21 +101,27 @@ li:hover {
   display: flex;
   padding: 2rem;
   justify-content: space-between;
-  /* margin-top: 4%; */
 }
 .section aside {
-  /* flex: 1; */
+  flex: 1;
   margin-left: 1rem;
 }
-.section .textSide {
-  flex: 1;
-  /* padding-top: 3rem; */
-  /* padding-left: 2rem; */
-  padding-right: 4rem;
-  padding-bottom: 3rem;
-}
-.section .sectImg {
+.section aside .sectImg {
   filter: drop-shadow(0 5px 5px rgb(0, 0, 0));
+}
+.section .textSide {
+  flex: 1.3;
+  padding-left: 2rem;
+  padding-right: 4rem;
+}
+.section .textSide .centerText {
+  text-align: center;
+}
+.section .textSide .centerText .ccolor {
+  color: #ac7e68;
+}
+.section .textSide .centerText .name {
+  font-weight: bold;
 }
 .section .section-col {
   flex-direction: row;
@@ -123,31 +146,6 @@ li:hover {
   border: none;
   color: #fff;
   cursor: pointer;
-}
-
-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #000;
-  /* height: 4rem; */
-  height: 80px;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  color: white;
-  text-align: center;
-}
-
-.colorWhite {
-  color: #ffffff;
-}
-
-header {
-  position: sticky;
-  top: 0;
-  z-index: 100;
 }
 
 form {
