--- a/sem3-4-5/css/style.scss
+++ b/sem3-4-5/css/style.scss
@@ -154,7 +154,7 @@ h2{
 
 .menu {
   display: grid;
-  grid-template-columns: auto auto; // Two columns with equal width
+  grid-template-columns: auto auto;
   justify-content: space-between;
   p{
       @include bolding;
