--- a/biydaalt1/public/css/style.css
+++ b/biydaalt1/public/css/style.css
@@ -71,7 +71,6 @@ p {
 	color: crimson;
 }
 
-/* Header section */
 #header {
 	position: fixed;
 	z-index: 1000;
@@ -196,15 +195,13 @@ p {
 #header .hamburger.active .bar::after {
 	top: 0;
 }
-/* End Header section */
 
-/* Hero Section */
 #hero {
-	background-image: url(./img/hero-bg.png);
+	background-image: url(../../img/hero-bg.png);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
-	z-index: 1;
+	z-index: 1;	
 	
 }
 #hero::after {
@@ -270,9 +267,7 @@ p {
 	animation-delay: 3.5s;
 }
 
-/* End Hero Section */
 
-/* Services Section */
 #services .services {
 	flex-direction: column;
 	text-align: center;
@@ -287,13 +282,15 @@ p {
 #services .service-bottom {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
     margin-top: 50px;
-    width: 1700px;
-	align-items: flex-start;
+    max-width: 1700px; 
+    margin: 0 auto;
 }
 
 #services .service-item {
-	flex-basis: 80%;
+	flex-basis: calc(33.33% - 20px);
+    box-sizing: border-box; 
 	display: flex;
 	align-items: flex-start;
 	justify-content: center;
@@ -321,21 +318,20 @@ p {
 #services .service-bottom .icon {
 	height: 80px;
 	width: 80px;
-	margin-bottom: 20px;
+	margin-bottom: auto;
 }
 #services .service-item h2 {
 	font-size: 2rem;
 	color: white;
-	margin-bottom: 10px;
+	margin-top: 1px;
 	text-transform: uppercase;
 }
 #services .service-item p {
 	color: white;
 	text-align: left;
+	margin-bottom: auto;
 }
-/* End Services Section */
 
-/* Projects section */
 #projects .projects {
 	flex-direction: column;
 	max-width: 1200px;
@@ -409,9 +405,7 @@ p {
 #projects .project-item:hover .project-img img {
 	transform: scale(1.1);
 }
-/* End Projects section */
 
-/* About Section */
 #about .about {
 	flex-direction: column-reverse;
 	text-align: center;
@@ -457,9 +451,7 @@ p {
 	border: 7px solid crimson;
 	z-index: -1;
 }
-/* End About Section */
 
-/* contact Section */
 #contact .contact {
 	flex-direction: column;
 	max-width: 1200px;
@@ -467,7 +459,7 @@ p {
 	width: 90%;
 }
 #contact .contact-items {
-	/* max-width: 400px; */
+
 	width: 100%;
 }
 #contact .contact-item {
@@ -502,9 +494,7 @@ p {
 	line-height: 2rem;
 	font-weight: 500;
 }
-/*End contact Section */
 
-/* Footer */
 #footer {
 	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 }
@@ -542,9 +532,7 @@ p {
 	color: white;
 	font-size: 1.3rem;
 }
-/* End Footer */
 
-/* Keyframes */
 @keyframes hamburger_puls {
 	0% {
 		opacity: 1;
@@ -576,9 +564,7 @@ p {
 		font-weight: 500;
 	}
 }
-/* End Keyframes */
 
-/* Media Query For Tablet */
 @media only screen and (min-width: 768px) {
 	.cta {
 		font-size: 2.5rem;
@@ -588,20 +574,15 @@ p {
 		font-size: 6rem;
 	}
 
-	/* Hero */
 	#hero h1 {
 		font-size: 7rem;
 	}
-	/* End Hero */
 
-	/* Services Section */
 	#services .service-bottom .service-item {
 		flex-basis: 45%;
 		margin: 2.5%;
 	}
-	/* End Services Section */
 
-	/* Project */
 	#projects .project-item {
 		flex-direction: row;
 	}
@@ -620,9 +601,7 @@ p {
 	#projects .all-projects .project-img {
 		height: 100%;
 	}
-	/* End Project */
 
-	/* About */
 	#about .about {
 		flex-direction: row;
 	}
@@ -645,9 +624,7 @@ p {
 	#about .col-right h1 {
 		text-align: left;
 	}
-	/* End About */
 
-	/* contact  */
 	#contact .contact {
 		flex-direction: column;
 		padding: 100px 0;
@@ -679,13 +656,11 @@ p {
 		text-align: left;
 		padding-left: 20px;
 	}
-	/* End contact  */
-}
-/* End Media Query For Tablet */
 
-/* Media Query For Desktop */
+}
+
 @media only screen and (min-width: 1200px) {
-	/* header */
+
 	#header .hamburger {
 		display: none;
 	}
@@ -705,11 +680,8 @@ p {
 	#header .nav-list ul a:after {
 		display: none;
 	}
-	/* End header */
-
 	#services .service-bottom .service-item {
 		flex-basis: 22%;
 		margin: 1.5%;
 	}
 }
-/* End  Media Query For Desktop */
