--- a/biydaalt1/css/style.css
+++ b/biydaalt1/css/style.css
@@ -244,7 +244,7 @@ p {
 }
 
 #hero {
-	background-image: url(../../img/hero-bg.png);
+	background-image: url(../img/hero-bg.png);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
