--- a/erkabiydaalt/app/src/main/res/layout/activity_main.xml
+++ b/erkabiydaalt/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/loading" />
+        android:src="@drawable/wallpaper" />
 
     <ProgressBar
         android:id="@+id/progressBar"
