--- a/sem8/sem8_app/static/sem8_app/css/style.css
+++ b/sem8/sem8_app/static/sem8_app/css/style.css
@@ -4,7 +4,53 @@
 	margin: 0;
 	box-sizing: border-box;
 }
+#chat-widget {
+	z-index: 9999;
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	width: 60px;
+	height: 60px;
+	border: 0px solid white;
+	border-radius: 100%;
+	overflow: hidden;
+	box-shadow: 0px 0px 10px white;
+	display: flex;
+	flex-direction: column;
+	image-rendering: auto;
+	transition: height 0.3s, border-radius 0.3s, width 0.3s;
+}
 
+#chatbox {
+	flex: 1;
+	overflow-y: scroll;
+	padding: 10px;
+	max-height: 400px;
+	background-color: white;
+}
+
+#userInput {
+	width: 80%;
+	padding: 5px;
+	margin: 5px;
+}
+
+#sendButton {
+	padding: 5px;
+	margin: 5px;
+	background-color: #6488ea;
+	color: white;
+	border: none;
+	cursor: pointer;
+}
+
+#toggleButton {
+	background-color: #6488ea;
+	color: white;
+	border: none;
+	padding: 5px;
+	cursor: default
+}
 html {
 	font-size: 10px;
 	font-family: 'Montserrat', sans-serif;
@@ -198,7 +244,7 @@ p {
 }
 
 #hero {
-	background-image: url(img/hero-bg.png);
+	background-image: url(../img/hero-bg.png);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
@@ -298,7 +344,7 @@ p {
 	flex-direction: column;
 	padding: 20px;
 	border-radius: 10px;
-	background-image: url(./img/img-1.png);
+	background-image: url(../img/img-1.png);
 	background-size: cover;
 	margin: 10px 5%;
 	position: relative;
@@ -406,7 +452,6 @@ p {
 #projects .project-item:hover .project-img img {
 	transform: scale(1.1);
 }
-
 
 #about .about {
 	flex-direction: column-reverse;
