--- a/sem8/sem8_app/templates/sem8_app/index.html
+++ b/sem8/sem8_app/templates/sem8_app/index.html
@@ -1,13 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erka AI</title>
-    <link rel="stylesheet" href="{% static 'appname/css/yourstyle.css' %}">
-</head>
+    <link rel="stylesheet" type="text/css" href="{% static 'sem8_app/css/style.css' %}">
+
 <body>
+
     <section id="header">
         <div class="header container">
           <div class="nav-bar">
@@ -42,7 +44,7 @@
             <a href="#projects" type="button" class="cta">Төслүүд</a>
           </div>
           <div style="margin-left:200px ; width: 50vh; height: 50vh; border: 2px solid black; border-radius: 50%; overflow: hidden;">
-            <img src="img/pro.png" alt="Your Image" style="width: 100%; height: 100%; object-fit: cover;">
+            <img src="{% static 'sem8_app/img/pro.png' %}" alt="My Image" style="width: 100%; height: 100%; object-fit: cover;">
           </div>
           
         </div>
@@ -94,7 +96,7 @@
                 </p>
               </div>
               <div class="project-img">
-                <img src="img/gs25.png" alt="img">
+                <img src="{% static 'sem8_app/img/gs25.png' %}" alt="img">
               </div>
             </div>
             <div class="project-item">
@@ -106,7 +108,7 @@
                 </p>
               </div>
               <div class="project-img">
-                <img src="img/startup.png" alt="img">
+                <img src="{% static 'sem8_app/img/startup.png' %}" alt="img">
               </div>
             </div>
             <div class="project-item">
@@ -118,7 +120,7 @@
                 </p>
               </div>
               <div class="project-img">
-                <img src="img/haanbank.png" alt="img">
+                <img src="{% static 'sem8_app/img/haanbank.png' %}" alt="img">
               </div>
             </div>
             <div class="project-item">
@@ -130,7 +132,7 @@
                 </p>
               </div>
               <div class="project-img">
-                <img src="img/nsp.png" alt="img">
+                <img src="{% static 'sem8_app/img/nsp.png' %}" alt="img">
               </div>
             </div>
             <div class="project-item">
@@ -142,18 +144,18 @@
                 </p>
               </div>
               <div class="project-img">
-                <img src="img/ict.png" alt="img">
+                <img src="{% static 'sem8_app/img/ict.png' %}" alt="img">
               </div>
             </div>
           </div>
         </div>
       </section>
-      
+    
       <section id="about">
         <div class="about container">
           <div class="col-left">
             <div class="about-img">
-              <img src="img/pro.png" alt="img">
+              <img src="{% static 'sem8_app/img/pro.png' %}" alt="img">
             </div>
           </div>
           <div class="col-right">
@@ -164,7 +166,7 @@
               Суралцах хугацаандаа давхар олон төрлийн ажил хийдэг байсан бөгөөд тэр дундаас хамгийн таалагдсан нь Бизнес судлал 
               байсан. Иймд IT-ийн чадвартай хослуулан цаашид ажиллах хүсэлтэй.
             </p>
-            <a href="src/myinfo.pdf" class="cta" target="_blank">CV татах</a>
+            <a href="{% static 'sem8_app/files/myinfo.pdf' %}" class="cta" target="_blank">CV татах</a>
           </div>
         </div>
       </section>
@@ -216,7 +218,6 @@
           <p>Copyright © 2023 Erka. All rights reserved</p>  
         </div>
       </section>
-      
-      <script src="{% static 'appname/js/yourscript.js' %}"></script>
+      <script src="{% static 'sem8_app/js/script.js' %}"></script>
 </body>
 </html>
